--- a/Movie Assignment/View/Category cell/CategoryCell.xib
+++ b/Movie Assignment/View/Category cell/CategoryCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="Movies_Asignment" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="gTV-IL-0wX" customClass="CategoryCell" customModule="Movie_Assignment" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="509" height="131"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -17,18 +17,18 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xV-pp-5bN">
-                        <rect key="frame" x="441" y="0.0" width="68" height="30"/>
+                        <rect key="frame" x="431" y="0.0" width="68" height="30"/>
                         <state key="normal" title="+ View All">
                             <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                         <connections>
-                            <action selector="ViewAllPressed:" destination="gTV-IL-0wX" eventType="touchUpInside" id="3nu-hg-7rf"/>
+                            <action selector="viewAllMoviesPressed:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ogM-88-gpC"/>
                         </connections>
                     </button>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pqG-Wh-8NN">
                         <rect key="frame" x="0.0" y="30" width="509" height="101"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="GYb-9g-pI8">
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3oq-9d-Lz9">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -36,7 +36,7 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLM-zg-stU">
-                        <rect key="frame" x="0.0" y="4" width="42" height="21"/>
+                        <rect key="frame" x="10" y="4" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <nil key="highlightedColor"/>
@@ -47,8 +47,8 @@
                 <constraint firstAttribute="bottom" secondItem="pqG-Wh-8NN" secondAttribute="bottom" id="8c1-fJ-8k4"/>
                 <constraint firstAttribute="trailing" secondItem="pqG-Wh-8NN" secondAttribute="trailing" id="LEg-bP-Whd"/>
                 <constraint firstItem="pqG-Wh-8NN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="30" id="LY4-k1-OcH"/>
-                <constraint firstItem="zLM-zg-stU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QWk-FM-DMo"/>
-                <constraint firstAttribute="trailing" secondItem="8xV-pp-5bN" secondAttribute="trailing" id="TW6-qU-odE"/>
+                <constraint firstItem="zLM-zg-stU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="QWk-FM-DMo"/>
+                <constraint firstAttribute="trailing" secondItem="8xV-pp-5bN" secondAttribute="trailing" constant="10" id="TW6-qU-odE"/>
                 <constraint firstItem="8xV-pp-5bN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="jC5-gh-8ZJ"/>
                 <constraint firstItem="pqG-Wh-8NN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uGb-FY-OeR"/>
                 <constraint firstItem="zLM-zg-stU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="y4t-rd-HMj"/>
@@ -56,8 +56,8 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="509" height="131"/>
             <connections>
-                <outlet property="movieCollectionView" destination="pqG-Wh-8NN" id="KGP-fn-GEu"/>
-                <outlet property="sectionName" destination="zLM-zg-stU" id="vSN-vr-4Ge"/>
+                <outlet property="categoryTitleLabel" destination="zLM-zg-stU" id="vX2-V5-GE5"/>
+                <outlet property="movieCollectionView" destination="pqG-Wh-8NN" id="X0K-yk-45D"/>
             </connections>
             <point key="canvasLocation" x="251.44927536231887" y="97.433035714285708"/>
         </collectionViewCell>
