--- a/Movie Assignment/View/Movie cell/MovieCell.xib
+++ b/Movie Assignment/View/Movie cell/MovieCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="Movies_Asignment" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieCell" id="gTV-IL-0wX" customClass="MovieCell" customModule="Movie_Assignment" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="101" height="167"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="101" height="167"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VhV-9Q-5cS">
-                        <rect key="frame" x="0.0" y="0.0" width="101" height="167"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VhV-9Q-5cS">
+                        <rect key="frame" x="0.0" y="-1" width="101" height="168"/>
                     </imageView>
                 </subviews>
             </view>
@@ -30,9 +30,12 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="101" height="167"/>
             <connections>
-                <outlet property="posterImage" destination="VhV-9Q-5cS" id="l2W-Lg-aSh"/>
+                <outlet property="moviePosterImage" destination="VhV-9Q-5cS" id="PSA-GF-2pB"/>
             </connections>
             <point key="canvasLocation" x="174.63768115942031" y="91.40625"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="square.and.arrow.up.fill" catalog="system" width="56" height="64"/>
+    </resources>
 </document>
